<resources>
    <string name="app_name">Rate All The Things</string>
    <string name="menu_search">Search</string>
    <string name="menu_account">Edit account</string>
    <string name="create_account">Create Account</string>
    <string name="email">E-Mail</string>
    <string name="name">Name</string>
    <string name="update_barcode">Update Barcode</string>
    <string name="comment">Comment</string>
    <string name="post_comment">Post comment</string>
    <string name="display_comment">Display comments</string>
    <string name="rating">Rating</string>
    <string name="rate_barcode">Rate Barcode</string>
    <string name="enter_email">Enter a valid email</string>
    <string name="comment_too_short">Comment too short</string>
    <string name="name_too_short">Name too short</string>
    <string name="start_account_activity">You need to Sign in to your account or Create a new account.</string>
    <string name="ok">Ok</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_share">Share</string>
    <string name="scan">Scan</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="post_comment_failed">Unable to send comment</string>
    <string name="rating_failed">Unable to rate BarCode</string>
    <string name="unable_to_auth">Username or password wrong or Unable to connecto to server</string>
    <string name="email_usage">Your e-mail will be used to identify your account and to get your avatar from the Gravatar service.\nIt will not be shared with any third party.</string>
    <string name="account_details">Getting account details.</string>
    <string name="account_name">Update your account details.</string>
    <string name="enter_alias">What do you call yourself?</string>
    <string name="update_account">Update account</string>
    <string name="updating_account">Updating account...</string>
    <string name="update_account_error">Error during updating, try again.</string>
    <string name="signin_text">If you don\'t know your password please visit the website.</string>
</resources>