<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="fill_parent"
                      android:padding="4dp"
                      android:layout_height="wrap_content">
            <TextView android:text=""
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tvCode"/>
        </LinearLayout>
        <View android:layout_height="2dp"
              android:layout_width="fill_parent"
              android:background="@color/divider_color"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:padding="4dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView android:text="@string/name"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <EditText android:id="@+id/barcodeName"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"/>

            <TextView android:text="@string/manufacturer"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

            <EditText android:id="@+id/barcodeManufacturer"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="right">
            <Button android:id="@+id/btnUpdateBarcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_barcode"
                    android:padding="16dp"/>
        </LinearLayout>

        <View android:layout_height="2dp"
              android:layout_width="fill_parent"
              android:background="@color/divider_color"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <TextView android:text="@string/rating"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:padding="4dp"
                      android:textSize="20dp"
                      android:layout_marginTop="12dp"
                      android:id="@+id/tvRating"/>

            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:gravity="right">
                <Button android:id="@+id/btnRateBarCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_barcode"
                        android:padding="16dp"
                        />
            </LinearLayout>
        </LinearLayout>
        <View android:layout_height="2dp"
              android:layout_width="fill_parent"
              android:background="@color/divider_color"/>

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:padding="4dp"
                      android:orientation="vertical">
            <TextView android:text="@string/comment"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
            <EditText android:id="@+id/commentText"
                      android:layout_width="fill_parent"
                      android:lines="3"
                      android:minLines="2"
                      android:layout_height="wrap_content"
                      android:inputType="text"/>
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:padding="4dp"
                      android:gravity="right">
            <Button android:id="@+id/btnPostComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_comment"/>
        </LinearLayout>

        <View android:layout_height="2dp"
              android:layout_width="fill_parent"
              android:background="@color/divider_color"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_marginTop="12dp">
            <Button android:id="@+id/btnDisplayComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_comment" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>